--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@sanity/image-url": "^1.1.0",
+		"@sendgrid/mail": "^8.1.4",
+		"sanity": "^3.66.1"
 	}
 }
